@@ -15,6 +15,7 @@ aTunes 2.2.0
 - Improved filters to retrieve albums from last.fm (mbid, artist match) Removed filters as preferences
 - Optimizations retrieving list of covers of albums in artist panel
 - Removed status bar text showing current element being played
+- Last.fm cache simplified to use only one ehcache cache
 
 aTunes 2.1.1
 ------------
